<resources>
    <string name="app_name">SewingPatternApp</string>
    <string name="title_activity_add_pattern">AddPatternActivity</string>
    <string name="addPaternActivityButton">Save</string>
    <string name="AddPattern_NotesHint">add any notes here</string>
    <string name="AddPattern_BackImageLabel">Back of pattern</string>
    <string name="AddPattern_FontImageLabel">Front of pattern</string>
    <string name="AddPattern_ContentHint">What items can you make with this pattern?</string>
    <string name="AddPattern_SizesHint">sizes</string>
    <string name="AddPattern_PatternNoHint">pattern number</string>
    <string name="AddPatern_FrontImageAltContent">A picture of the front of the pattern</string>
    <string name="AddPatern_BackImageAltContent">A picture of the back of the pattern</string>
    <string name="AddPatternSuccess">pattern added successfully</string>
    <string name="ModifyPatternSuccess">pattern modified successfully</string>
    <string name="BasicSearch_Hint">search by pattern number&#8230; article type&#8230;</string>
    <string name="BasicSearch_placeHolderImageAlt">A thread spool image</string>
    <string name="AddPattern_brandHint">brand</string>
    <string name="pattern_view_item_contentDescription">a thumbnail view of the front of the pattern</string>
    <string name="noPatternsFound">No matching patterns found</string>
    <string name="pattern_deleted">The pattern has been deleted</string>
    <string name="database_error">Something went wrong</string>
    <string name="AdvancedSearch_SizeHint">size</string>
    <string name="AdvancedSearch_NotesHint">notes</string>
    <string name="AdvancedSearch_SearchButton">Search</string>
    <string name="examineActivity_EditButton">Edit</string>
    <string name="ExamineActivity_saveButton">Save</string>
    <string name="ExamineActivity_cancelButton">Cancel</string>
    <string name="ExamineActivity_deleteButton">Delete</string>
    <string name="confirmation">Confirmation</string>
    <string name="dialog_confirm_delete">Are you sure you want to delete this pattern?</string>
    <string name="patternNumber">Pattern Number</string>
    <string name="brand">Brand</string>
    <string name="sizes">Sizes</string>
    <string name="contents">Contents</string>
    <string name="notes">Notes</string>
    <string name="BasicSearchActivity">Basic Search</string>
    <string name="AdvancedSearchActivity">Advanced Search</string>
    <string name="AddPatternActivity">Add New Pattern</string>
    <string name="BrowseActivity">Browse</string>
</resources>
