<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="com.weebly.stevelosk.sewingpatternapp.AddPatternActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/AddPattern_PatternNoHint"
        android:inputType="textPersonName" />

    <AutoCompleteTextView
        android:id="@+id/brandAutoCompleteView"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:completionHint="brand" />

    <EditText
        android:id="@+id/patternNumberEditText"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/AddPattern_SizesHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/sizesEditText"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/AddPattern_ContentHint"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/frontImage"
            android:layout_width="107dp"
            android:layout_height="99dp"
            android:layout_weight="1"
            android:contentDescription="@string/AddPatern_FrontImageAltContent"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/backImage"
            android:layout_width="107dp"
            android:layout_height="99dp"
            android:layout_weight="1"
            android:contentDescription="@string/AddPatern_BackImageAltContent"
            app:srcCompat="@mipmap/ic_launcher" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/frontImgLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/AddPattern_FontImageLabel" />

        <TextView
            android:id="@+id/backImgLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/AddPattern_BackImageLabel" />

    </LinearLayout>

    <EditText
        android:id="@+id/notesEditText"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="1dp"
        android:ems="10"
        android:hint="@string/AddPattern_NotesHint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/confirmAddButton"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPaternActivityButton"/>
</LinearLayout>
