<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weebly.stevelosk.sewingpatternapp.AdvancedSearchActivity">


    <EditText
        android:id="@+id/patternNumberEditText"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/AddPattern_PatternNoHint"
        android:inputType="textVisiblePassword" />

    <EditText
        android:id="@+id/brandEditText"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/AddPattern_brandHint"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/sizesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/AdvancedSearch_SizeHint"
        android:inputType="textVisiblePassword" />

    <EditText
        android:id="@+id/contentsEditText"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/AddPattern_ContentHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/AdvancedSearch_NotesHint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/AdvancedSearch_SearchButton" />

    <ListView
        android:id="@+id/advancedSearch_ListView"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</LinearLayout>
